--- a/when/package.json
+++ b/when/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "holyjs-wallaby-and-quokka-with-dom",
+  "name": "holyjs-wallaby-and-quokka-when",
   "version": "1.0.0",
-  "description": "wallaby.js with DOM, mocha and es6 example",
+  "description": "wallaby.js when",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,11 +13,8 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "assert": "^1.4.1",
     "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.6.1",
-    "mocha": "^5.1.1",
-    "wallaby-webpack": "^3.9.7",
-    "webpack": "^4.8.1"
+    "babel-preset-env": "^1.7.0",
+    "mocha": "^5.1.1"
   }
 }
